force-app/main/default/objects/DVC_Tour_Guide_Shift__c/DVC_Tour_Guide_Shift__c.object-meta.xml
<CustomObject>
    <label>Tour Guide Shift</label>
    <pluralLabel>Tour Guide Shifts</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Tour Guide Shift Name</label>
        <displayFormat>TGS-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>DMS-4909: Represents one configured guide shift (time range + guide count) under a DVC_Tour_Availability__c record. Supports the repeatable &quot;Add Shift&quot; UI. See LLD docs/DMS-4909-LLD.md Section 7.3.</description>
</CustomObject>