force-app/main/default/objects/DVC_Tour_Guide_Shift__c/fields/DVC_Number_of_Guides__c.field-meta.xml
<CustomField>
    <fullName>DVC_Number_of_Guides__c</fullName>
    <label>Number of Guides</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
    <defaultValue>2</defaultValue>
    <description>Number of guides on duty for this shift. Minimum 1 (VR-05); drives Onsite capacity for slot rows covered by this shift (LLD Section 10.1). Default confirmed as 2 per business Q8.</description>
</CustomField>