force-app/main/default/objects/DVC_Tour_Guide_Shift__c/fields/DVC_Shift_End_Time__c.field-meta.xml
<CustomField>
    <fullName>DVC_Shift_End_Time__c</fullName>
    <label>Shift End Time</label>
    <type>Time</type>
    <required>true</required>
    <description>End of this guide shift. Must be later than Shift Start Time (VR-05).</description>
</CustomField>