force-app/main/default/objects/DVC_Tour_Guide_Shift__c/fields/DVC_Shift_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>DVC_Shift_Start_Time__c</fullName>
    <label>Shift Start Time</label>
    <type>Time</type>
    <required>true</required>
    <description>Start of this guide shift. Must be earlier than Shift End Time (VR-05).</description>
</CustomField>