force-app/main/default/objects/DVC_Tour_Guide_Shift__c/fields/DVC_Tour_Availability__c.field-meta.xml
<CustomField>
    <fullName>DVC_Tour_Availability__c</fullName>
    <label>Tour Availability</label>
    <type>MasterDetail</type>
    <referenceTo>DVC_Tour_Availability__c</referenceTo>
    <relationshipName>DVC_Tour_Guide_Shifts</relationshipName>
    <relationshipLabel>Tour Guide Shifts</relationshipLabel>
    <required>true</required>
    <description>Parent day&apos;s schedule. Master-Detail so shifts are deleted with their parent and inherit sharing.</description>
</CustomField>